--- a/SW-ENG-II-Divisionsrechner/app/src/main/res/layout/activity_main.xml
+++ b/SW-ENG-II-Divisionsrechner/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="24dp"
+        android:onClick="onClickButton"
         android:text="Dividiere"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
